re-worked for DB

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
-# OpenAI API Key - get one at https://platform.openai.com/api-keys
-VITE_OPENAI_API_KEY=sk-your-api-key-here
+# Firebase (client-side, safe to expose)
+VITE_FIREBASE_API_KEY=
+VITE_FIREBASE_AUTH_DOMAIN=
+VITE_FIREBASE_PROJECT_ID=
+VITE_FIREBASE_STORAGE_BUCKET=
+VITE_FIREBASE_MESSAGING_SENDER_ID=
+VITE_FIREBASE_APP_ID=
+
+# OpenAI -- set in Netlify dashboard only, NOT in .env
+# OPENAI_API_KEY=sk-...
