--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-popover": "^1.1.15",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "firebase": "^12.9.0",
+    "lucide-react": "^0.574.0",
     "openai": "^6.22.0",
     "pdfjs-dist": "^5.4.624",
     "react": "^19.2.0",
+    "react-day-picker": "^9.13.2",
     "react-dom": "^19.2.0",
-    "react-dropzone": "^15.0.0"
+    "react-dropzone": "^15.0.0",
+    "tailwind-merge": "^3.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
